Bug 395977 - Schedule Reports show both sides of transactions
Summary: Schedule Reports show both sides of transactions
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: reports (other bugs)
Version First Reported In: 5.0.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-06-28 19:53 UTC by capemayal
Modified: 2019-09-21 16:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description capemayal 2018-06-28 19:53:28 UTC
Ubuntu 18.04.  Kmymoney 5.0.0
Custom configured scheduled reports
1) Show both sides of transaction for all schedules.
2) Crashes Kmymoney
Comment 1 capemayal 2018-06-28 19:54:10 UTC
Ubuntu 18.04 is a fresh install NOT an upgrade.
Comment 2 Thomas Baumgart 2019-09-21 16:19:48 UTC
Git commit acf951afa3e2d716802e298efa660b0d55ef3152 by Thomas Baumgart.
Committed on 21/09/2019 at 12:52.
Pushed by tbaumgart into branch '5.0'.

Improve schedule information report

Don't show the splits twice and for a simple transaction only show one
line.
FIXED-IN: 5.0.7

M  +13   -3    kmymoney/plugins/views/reports/core/objectinfotable.cpp

https://commits.kde.org/kmymoney/acf951afa3e2d716802e298efa660b0d55ef3152