Improve schedule information report

Don't show the splits twice and for a simple transaction only show one
line.

BUG: 395977
FIXED-IN: 5.0.7